{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 453,
  "lineage": "2e4961cf-2d5a-ca84-99a3-bbf5138cb341",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "chewbacca_nat_eip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0556ec748fc51a96c",
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:elastic-ip/eipalloc-0556ec748fc51a96c",
            "association_id": "eipassoc-0577770f1e5f771de",
            "domain": "vpc",
            "id": "eipalloc-0556ec748fc51a96c",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-094a57f408233eaa6",
            "private_dns": "ip-10-17-1-242.ap-northeast-1.compute.internal",
            "private_ip": "10.17.1.242",
            "public_dns": "ec2-54-249-242-85.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.249.242.85",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "armageddon-class-vii-nat-eip01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-nat-eip01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "chewbacca_ec201",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03d1820163e6b9f5d",
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:instance/i-0c8390f19bff01693",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "armageddon-class-vii-instance-profile01",
            "id": "i-0c8390f19bff01693",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-040fc0743e602d7fb"
              }
            ],
            "primary_network_interface_id": "eni-040fc0743e602d7fb",
            "private_dns": "ip-10-17-1-237.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.17.1.237",
            "public_dns": "ec2-13-192-183-92.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.192.183.92",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0dcfb92d9530546e7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01a59fcfe8c0a7c25",
            "tags": {
              "Name": "armageddon-class-vii-ec201"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-ec201"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fd4ddedaa57644e8"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "i-0c8390f19bff01693",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.chewbacca_instance_profile01",
            "aws_iam_role.chewbacca_ec2_role01",
            "aws_secretsmanager_secret.chewbacca_db_secret01",
            "aws_security_group.chewbacca_ec2_sg01",
            "aws_subnet.chewbacca_public_subnets",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "chewbacca_ec201_private_bonus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03d1820163e6b9f5d",
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:instance/i-042b0c597f59025ac",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "armageddon-class-vii-instance-profile01",
            "id": "i-042b0c597f59025ac",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f9d96e72ab13d096"
              }
            ],
            "primary_network_interface_id": "eni-0f9d96e72ab13d096",
            "private_dns": "ip-10-17-11-63.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.17.11.63",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05c70de1e0b57ecef",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a2457d0c08d6a515",
            "tags": {
              "Name": "armageddon-class-vii-ec201-private"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-ec201-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fd4ddedaa57644e8"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "i-042b0c597f59025ac",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.chewbacca_instance_profile01",
            "aws_iam_role.chewbacca_ec2_role01",
            "aws_secretsmanager_secret.chewbacca_db_secret01",
            "aws_security_group.chewbacca_ec2_sg01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "chewbacca_igw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:internet-gateway/igw-0d2fa1376f5371090",
            "id": "igw-0d2fa1376f5371090",
            "owner_id": "420228061920",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "armageddon-class-vii-igw01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-igw01"
            },
            "vpc_id": "vpc-07e52e6f899ae86ca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "chewbacca_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "armageddon-class-vii-alb-logs-420228061920",
                "enabled": true,
                "prefix": "alb-access-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:loadbalancer/app/armageddon-class-vii-alb01/202e960cc5b39f1d",
            "arn_suffix": "app/armageddon-class-vii-alb01/202e960cc5b39f1d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "armageddon-class-vii-alb01-866112400.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:loadbalancer/app/armageddon-class-vii-alb01/202e960cc5b39f1d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "armageddon-class-vii-alb01",
            "preserve_host_header": false,
            "region": "ap-northeast-1",
            "security_groups": [
              "sg-05f7a2c537675ae46"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01a59fcfe8c0a7c25"
              },
              {
                "subnet_id": "subnet-0d3e35b3d569b63f2"
              }
            ],
            "subnets": [
              "subnet-01a59fcfe8c0a7c25",
              "subnet-0d3e35b3d569b63f2"
            ],
            "tags": {
              "Name": "armageddon-class-vii-alb01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-alb01"
            },
            "vpc_id": "vpc-07e52e6f899ae86ca",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:loadbalancer/app/armageddon-class-vii-alb01/202e960cc5b39f1d"
          },
          "dependencies": [
            "aws_s3_bucket.chewbacca_alb_logs_bucket01",
            "aws_security_group.chewbacca_alb_sg01",
            "aws_subnet.chewbacca_public_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_caller_identity.chewbacca_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "chewbacca_http_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:listener/app/armageddon-class-vii-alb01/202e960cc5b39f1d/c6e99ded239e5280",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:listener/app/armageddon-class-vii-alb01/202e960cc5b39f1d/c6e99ded239e5280",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:loadbalancer/app/armageddon-class-vii-alb01/202e960cc5b39f1d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:listener/app/armageddon-class-vii-alb01/202e960cc5b39f1d/c6e99ded239e5280"
          },
          "dependencies": [
            "aws_lb.chewbacca_alb01",
            "aws_s3_bucket.chewbacca_alb_logs_bucket01",
            "aws_security_group.chewbacca_alb_sg01",
            "aws_subnet.chewbacca_public_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_caller_identity.chewbacca_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "chewbacca_https_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:listener/app/armageddon-class-vii-alb01/202e960cc5b39f1d/5d76ca396ce6af92",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:420228061920:certificate/a179f063-d9a1-4d47-9f70-11588cb8de26",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:targetgroup/armageddon-class-vii-tg01/5d39017416fcd485",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:listener/app/armageddon-class-vii-alb01/202e960cc5b39f1d/5d76ca396ce6af92",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:loadbalancer/app/armageddon-class-vii-alb01/202e960cc5b39f1d",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:listener/app/armageddon-class-vii-alb01/202e960cc5b39f1d/5d76ca396ce6af92"
          },
          "dependencies": [
            "aws_acm_certificate.chewbacca_acm_cert01",
            "aws_acm_certificate_validation.chewbacca_acm_validation01_dns_bonus",
            "aws_lb.chewbacca_alb01",
            "aws_lb_target_group.chewbacca_tg01",
            "aws_route53_record.chewbacca_acm_validation_records01",
            "aws_route53_zone.chewbacca_zone01",
            "aws_s3_bucket.chewbacca_alb_logs_bucket01",
            "aws_security_group.chewbacca_alb_sg01",
            "aws_subnet.chewbacca_public_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_caller_identity.chewbacca_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "chewbacca_tg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:targetgroup/armageddon-class-vii-tg01/5d39017416fcd485",
            "arn_suffix": "targetgroup/armageddon-class-vii-tg01/5d39017416fcd485",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:targetgroup/armageddon-class-vii-tg01/5d39017416fcd485",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:loadbalancer/app/armageddon-class-vii-alb01/202e960cc5b39f1d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "armageddon-class-vii-tg01",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "armageddon-class-vii-tg01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-tg01"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07e52e6f899ae86ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:targetgroup/armageddon-class-vii-tg01/5d39017416fcd485"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "chewbacca_tg_attach01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:targetgroup/armageddon-class-vii-tg01/5d39017416fcd485,i-042b0c597f59025ac,80",
            "port": 80,
            "region": "ap-northeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:targetgroup/armageddon-class-vii-tg01/5d39017416fcd485",
            "target_id": "i-042b0c597f59025ac"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "port": 80,
            "region": "ap-northeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:targetgroup/armageddon-class-vii-tg01/5d39017416fcd485",
            "target_id": "i-042b0c597f59025ac"
          },
          "dependencies": [
            "aws_iam_instance_profile.chewbacca_instance_profile01",
            "aws_iam_role.chewbacca_ec2_role01",
            "aws_instance.chewbacca_ec201_private_bonus",
            "aws_lb_target_group.chewbacca_tg01",
            "aws_secretsmanager_secret.chewbacca_db_secret01",
            "aws_security_group.chewbacca_ec2_sg01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "chewbacca_nat01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0556ec748fc51a96c",
            "association_id": "eipassoc-0577770f1e5f771de",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0930a8522512f4556",
            "network_interface_id": "eni-094a57f408233eaa6",
            "private_ip": "10.17.1.242",
            "public_ip": "54.249.242.85",
            "region": "ap-northeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01a59fcfe8c0a7c25",
            "tags": {
              "Name": "armageddon-class-vii-nat01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-nat01"
            },
            "vpc_id": "vpc-07e52e6f899ae86ca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.chewbacca_nat_eip01",
            "aws_internet_gateway.chewbacca_igw01",
            "aws_subnet.chewbacca_public_subnets",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "chewbacca_private_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b2bbde992befc0631080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0930a8522512f4556",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0b2bbde992befc063",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0b2bbde992befc063"
          },
          "dependencies": [
            "aws_eip.chewbacca_nat_eip01",
            "aws_internet_gateway.chewbacca_igw01",
            "aws_nat_gateway.chewbacca_nat01",
            "aws_route_table.chewbacca_private_rt01",
            "aws_subnet.chewbacca_public_subnets",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "chewbacca_public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d2fa1376f5371090",
            "id": "r-rtb-049c201ba3f6cee691080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-049c201ba3f6cee69",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-049c201ba3f6cee69"
          },
          "dependencies": [
            "aws_internet_gateway.chewbacca_igw01",
            "aws_route_table.chewbacca_public_rt01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "chewbacca_private_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:route-table/rtb-0b2bbde992befc063",
            "id": "rtb-0b2bbde992befc063",
            "owner_id": "420228061920",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0930a8522512f4556",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "armageddon-class-vii-private-rt01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-private-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e52e6f899ae86ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "rtb-0b2bbde992befc063",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "chewbacca_public_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:route-table/rtb-049c201ba3f6cee69",
            "id": "rtb-049c201ba3f6cee69",
            "owner_id": "420228061920",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d2fa1376f5371090",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "armageddon-class-vii-public-rt01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-public-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e52e6f899ae86ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "rtb-049c201ba3f6cee69",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "chewbacca_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b962d974880de05e",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0b2bbde992befc063",
            "subnet_id": "subnet-0a2457d0c08d6a515"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.chewbacca_private_rt01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082941066f87eb606",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0b2bbde992befc063",
            "subnet_id": "subnet-0b5d4a06eb5258b73"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.chewbacca_private_rt01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "chewbacca_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a4e06a607bf7edb",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-049c201ba3f6cee69",
            "subnet_id": "subnet-01a59fcfe8c0a7c25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.chewbacca_public_rt01",
            "aws_subnet.chewbacca_public_subnets",
            "aws_vpc.chewbacca_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011a5cc98137fc63a",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-049c201ba3f6cee69",
            "subnet_id": "subnet-0d3e35b3d569b63f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.chewbacca_public_rt01",
            "aws_subnet.chewbacca_public_subnets",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chewbacca_alb_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:security-group/sg-05f7a2c537675ae46",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "10.17.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-05f7a2c537675ae46",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "armageddon-class-vii-alb-sg01",
            "name_prefix": "",
            "owner_id": "420228061920",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "armageddon-class-vii-alb-sg01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-alb-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e52e6f899ae86ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "sg-05f7a2c537675ae46",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chewbacca_ec2_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:security-group/sg-0fd4ddedaa57644e8",
            "description": "EC2 app security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd4ddedaa57644e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05f7a2c537675ae46"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "armageddon-class-vii-ec2-sg01",
            "name_prefix": "",
            "owner_id": "420228061920",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "armageddon-class-vii-ec2-sg01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-ec2-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e52e6f899ae86ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "sg-0fd4ddedaa57644e8",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chewbacca_rds_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:security-group/sg-09400a09e2267faae",
            "description": "RDS security group",
            "egress": [],
            "id": "sg-09400a09e2267faae",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL traffic",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd4ddedaa57644e8"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "armageddon-class-vii-rds-sg01",
            "name_prefix": "",
            "owner_id": "420228061920",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "armageddon-class-vii-rds-sg01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-rds-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e52e6f899ae86ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "sg-09400a09e2267faae",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chewbacca_vpce_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:security-group/sg-0cc6f196ca651b88e",
            "description": "SG for VPC Interface Endpoints",
            "egress": [],
            "id": "sg-0cc6f196ca651b88e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd4ddedaa57644e8"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "armageddon-class-vii-vpce-sg01",
            "name_prefix": "",
            "owner_id": "420228061920",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "armageddon-class-vii-vpce-sg01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-vpce-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e52e6f899ae86ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "sg-0cc6f196ca651b88e",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_egress_to_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.17.0.0/16"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-34093933",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-1",
            "security_group_id": "sg-05f7a2c537675ae46",
            "security_group_rule_id": "sgr-0a272e0cd1ced4b7c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.chewbacca_alb_sg01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-182348148",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-1",
            "security_group_id": "sg-05f7a2c537675ae46",
            "security_group_rule_id": "sgr-06f0c445531b306fa",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.chewbacca_alb_sg01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3642625314",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-1",
            "security_group_id": "sg-05f7a2c537675ae46",
            "security_group_rule_id": "sgr-0594e83521932d79a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.chewbacca_alb_sg01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "chewbacca_ec2_ingress_from_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-1384058743",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0fd4ddedaa57644e8",
            "security_group_rule_id": "sgr-07286cef39ef44233",
            "self": false,
            "source_security_group_id": "sg-05f7a2c537675ae46",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.chewbacca_alb_sg01",
            "aws_security_group.chewbacca_ec2_sg01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "endpoint_ingress_from_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-4061167243",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0cc6f196ca651b88e",
            "security_group_rule_id": "sgr-028cf1ba931497921",
            "self": false,
            "source_security_group_id": "sg-0fd4ddedaa57644e8",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.chewbacca_ec2_sg01",
            "aws_security_group.chewbacca_vpce_sg01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "chewbacca_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:subnet/subnet-0a2457d0c08d6a515",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.17.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2457d0c08d6a515",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "420228061920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "armageddon-class-vii-private-subnet01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-private-subnet01"
            },
            "vpc_id": "vpc-07e52e6f899ae86ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "subnet-0a2457d0c08d6a515",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:subnet/subnet-0b5d4a06eb5258b73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.17.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5d4a06eb5258b73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "420228061920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "armageddon-class-vii-private-subnet02"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-private-subnet02"
            },
            "vpc_id": "vpc-07e52e6f899ae86ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "subnet-0b5d4a06eb5258b73",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "chewbacca_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:subnet/subnet-01a59fcfe8c0a7c25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.17.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a59fcfe8c0a7c25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "420228061920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "armageddon-class-vii-public-subnet01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-public-subnet01"
            },
            "vpc_id": "vpc-07e52e6f899ae86ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "subnet-01a59fcfe8c0a7c25",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:subnet/subnet-0d3e35b3d569b63f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.17.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3e35b3d569b63f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "420228061920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "armageddon-class-vii-public-subnet02"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-public-subnet02"
            },
            "vpc_id": "vpc-07e52e6f899ae86ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "subnet-0d3e35b3d569b63f2",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "chewbacca_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:vpc/vpc-07e52e6f899ae86ca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.17.0.0/16",
            "default_network_acl_id": "acl-0e837aed6fe83f223",
            "default_route_table_id": "rtb-08bc7f75ea597896b",
            "default_security_group_id": "sg-0fa31a3223fa3c3ef",
            "dhcp_options_id": "dopt-0ce6a87df2fa0229b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07e52e6f899ae86ca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08bc7f75ea597896b",
            "owner_id": "420228061920",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "armageddon-class-vii-vpc01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-vpc01"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "vpc-07e52e6f899ae86ca",
            "region": "ap-northeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "chewbacca_vpce_ec2messages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:vpc-endpoint/vpce-01358723e3149bb51",
            "dns_entry": [
              {
                "dns_name": "vpce-01358723e3149bb51-yzljps6x.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-01358723e3149bb51-yzljps6x-ap-northeast-1a.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-01358723e3149bb51-yzljps6x-ap-northeast-1c.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ec2messages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z06631932T7ZAB701V4VF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01358723e3149bb51",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00e62d78cd39eee3c",
              "eni-089d21139570ae377"
            ],
            "owner_id": "420228061920",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0cc6f196ca651b88e"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ec2messages",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.17.11.160",
                "subnet_id": "subnet-0a2457d0c08d6a515"
              },
              {
                "ipv4": "10.17.12.11",
                "subnet_id": "subnet-0b5d4a06eb5258b73"
              }
            ],
            "subnet_ids": [
              "subnet-0a2457d0c08d6a515",
              "subnet-0b5d4a06eb5258b73"
            ],
            "tags": {
              "Name": "armageddon-class-vii-vpce-ec2messages01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-vpce-ec2messages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07e52e6f899ae86ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "vpce-01358723e3149bb51",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_vpce_sg01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_region.chewbacca_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "chewbacca_vpce_kms01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:vpc-endpoint/vpce-0c49f6a77e7f3ce7d",
            "dns_entry": [
              {
                "dns_name": "vpce-0c49f6a77e7f3ce7d-2brth3jd.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0c49f6a77e7f3ce7d-2brth3jd-ap-northeast-1a.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0c49f6a77e7f3ce7d-2brth3jd-ap-northeast-1c.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "kms.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z00471203VAGUIVTR2YBM"
              },
              {
                "dns_name": "kms.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z0660909EFX1W2HUOBNN"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c49f6a77e7f3ce7d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0aafe6ddf13135a1b",
              "eni-0f4897062a8083fa3"
            ],
            "owner_id": "420228061920",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0cc6f196ca651b88e"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.kms",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.17.11.136",
                "subnet_id": "subnet-0a2457d0c08d6a515"
              },
              {
                "ipv4": "10.17.12.56",
                "subnet_id": "subnet-0b5d4a06eb5258b73"
              }
            ],
            "subnet_ids": [
              "subnet-0a2457d0c08d6a515",
              "subnet-0b5d4a06eb5258b73"
            ],
            "tags": {
              "Name": "armageddon-class-vii-vpce-kms01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-vpce-kms01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07e52e6f899ae86ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "vpce-0c49f6a77e7f3ce7d",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_vpce_sg01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_region.chewbacca_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "chewbacca_vpce_logs01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:vpc-endpoint/vpce-05aa8113026be73d7",
            "dns_entry": [
              {
                "dns_name": "vpce-05aa8113026be73d7-878jn497.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-05aa8113026be73d7-878jn497-ap-northeast-1c.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-05aa8113026be73d7-878jn497-ap-northeast-1a.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "logs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z0046078WG1P6BK3GCOE"
              },
              {
                "dns_name": "logs.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z068366218I7K6VDA39XI"
              },
              {
                "dns_name": "streaming-logs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z00455083DXZH04LOHT6E"
              },
              {
                "dns_name": "streaming-logs.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z004624411U2AN2VI6BX4"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05aa8113026be73d7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00255d5fad14aee13",
              "eni-092d1c97303e4795b"
            ],
            "owner_id": "420228061920",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0cc6f196ca651b88e"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.logs",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.17.11.131",
                "subnet_id": "subnet-0a2457d0c08d6a515"
              },
              {
                "ipv4": "10.17.12.53",
                "subnet_id": "subnet-0b5d4a06eb5258b73"
              }
            ],
            "subnet_ids": [
              "subnet-0a2457d0c08d6a515",
              "subnet-0b5d4a06eb5258b73"
            ],
            "tags": {
              "Name": "armageddon-class-vii-vpce-logs01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-vpce-logs01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07e52e6f899ae86ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "vpce-05aa8113026be73d7",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_vpce_sg01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_region.chewbacca_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "chewbacca_vpce_s3_gw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:vpc-endpoint/vpce-0535c3c10b47717f3",
            "cidr_blocks": [
              "3.5.152.0/21",
              "52.219.162.0/23",
              "52.219.0.0/20",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.172.0/22",
              "52.219.20.0/23",
              "52.219.195.0/24",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.68.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0535c3c10b47717f3",
            "ip_address_type": "ipv4",
            "owner_id": "420228061920",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0b2bbde992befc063"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "service_region": "ap-northeast-1",
            "state": "available",
            "tags": {
              "Name": "armageddon-class-vii-vpce-s3-gw01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-vpce-s3-gw01"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-07e52e6f899ae86ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "vpce-0535c3c10b47717f3",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_route_table.chewbacca_private_rt01",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_region.chewbacca_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "chewbacca_vpce_secrets01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:vpc-endpoint/vpce-087e827159383ccff",
            "dns_entry": [
              {
                "dns_name": "vpce-087e827159383ccff-qrza2vf8.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-087e827159383ccff-qrza2vf8-ap-northeast-1a.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-087e827159383ccff-qrza2vf8-ap-northeast-1c.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "secretsmanager.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z0663468EPK2C1MF2PWZ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-087e827159383ccff",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05144f9989e9dccf8",
              "eni-0a845b3bfd0b81c97"
            ],
            "owner_id": "420228061920",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0cc6f196ca651b88e"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.secretsmanager",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.17.11.215",
                "subnet_id": "subnet-0a2457d0c08d6a515"
              },
              {
                "ipv4": "10.17.12.9",
                "subnet_id": "subnet-0b5d4a06eb5258b73"
              }
            ],
            "subnet_ids": [
              "subnet-0a2457d0c08d6a515",
              "subnet-0b5d4a06eb5258b73"
            ],
            "tags": {
              "Name": "armageddon-class-vii-vpce-secrets01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-vpce-secrets01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07e52e6f899ae86ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "vpce-087e827159383ccff",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_vpce_sg01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_region.chewbacca_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "chewbacca_vpce_ssm01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:vpc-endpoint/vpce-0aa0fd6c144596557",
            "dns_entry": [
              {
                "dns_name": "vpce-0aa0fd6c144596557-gbqm3ppj.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0aa0fd6c144596557-gbqm3ppj-ap-northeast-1c.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0aa0fd6c144596557-gbqm3ppj-ap-northeast-1a.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssm.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z06621692PRJ11DSI1U11"
              },
              {
                "dns_name": "ssm.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z02483091LB5JZKBABDM9"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0aa0fd6c144596557",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04ba263156ebeeb27",
              "eni-04ce2b6fd52dbbc56"
            ],
            "owner_id": "420228061920",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0cc6f196ca651b88e"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssm",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.17.11.73",
                "subnet_id": "subnet-0a2457d0c08d6a515"
              },
              {
                "ipv4": "10.17.12.42",
                "subnet_id": "subnet-0b5d4a06eb5258b73"
              }
            ],
            "subnet_ids": [
              "subnet-0a2457d0c08d6a515",
              "subnet-0b5d4a06eb5258b73"
            ],
            "tags": {
              "Name": "armageddon-class-vii-vpce-ssm01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-vpce-ssm01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07e52e6f899ae86ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "vpce-0aa0fd6c144596557",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_vpce_sg01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_region.chewbacca_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "chewbacca_vpce_ssmmessages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:vpc-endpoint/vpce-0cc51985c94799ff5",
            "dns_entry": [
              {
                "dns_name": "vpce-0cc51985c94799ff5-1r6a4ayx.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0cc51985c94799ff5-1r6a4ayx-ap-northeast-1c.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0cc51985c94799ff5-1r6a4ayx-ap-northeast-1a.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z066308425QMYYTJXXMKC"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z00476232J8T8B50I59PO"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0cc51985c94799ff5",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0060f08591e8e63d5",
              "eni-038bade5374555dae"
            ],
            "owner_id": "420228061920",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0cc6f196ca651b88e"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssmmessages",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.17.11.161",
                "subnet_id": "subnet-0a2457d0c08d6a515"
              },
              {
                "ipv4": "10.17.12.184",
                "subnet_id": "subnet-0b5d4a06eb5258b73"
              }
            ],
            "subnet_ids": [
              "subnet-0a2457d0c08d6a515",
              "subnet-0b5d4a06eb5258b73"
            ],
            "tags": {
              "Name": "armageddon-class-vii-vpce-ssmmessages01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-vpce-ssmmessages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07e52e6f899ae86ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "vpce-0cc51985c94799ff5",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_vpce_sg01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_region.chewbacca_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:security-group-rule/sgr-01ba4a37239796368",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-01ba4a37239796368",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0fd4ddedaa57644e8",
            "security_group_rule_id": "sgr-01ba4a37239796368",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "sgr-01ba4a37239796368",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_ec2_sg01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:security-group-rule/sgr-076bd22f891a1cf10",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTP traffic",
            "from_port": 80,
            "id": "sgr-076bd22f891a1cf10",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0fd4ddedaa57644e8",
            "security_group_rule_id": "sgr-076bd22f891a1cf10",
            "tags": {
              "Name": "armageddon-class-vii-http"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-http"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "sgr-076bd22f891a1cf10",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_ec2_sg01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:security-group-rule/sgr-017260493e87f7c1c",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow MySQL traffic",
            "from_port": 3306,
            "id": "sgr-017260493e87f7c1c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0fd4ddedaa57644e8",
            "region": "ap-northeast-1",
            "security_group_id": "sg-09400a09e2267faae",
            "security_group_rule_id": "sgr-017260493e87f7c1c",
            "tags": {
              "Name": "armageddon-class-vii-mysql"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-mysql"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "sgr-017260493e87f7c1c",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_ec2_sg01",
            "aws_security_group.chewbacca_rds_sg01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    }
  ]
}